--- a/TC-02.html
+++ b/TC-02.html
@@ -26,7 +26,7 @@
         <div>лечение водой <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>расширение вен <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>пониженное содержание клеток лимфы <i>(в крови)</i> <div class="area" spellcheck="false" contenteditable="true"></div> (<div class="area" spellcheck="false" contenteditable="true"></div>) <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div><b>клетка</b>, способная <b>поглощать</b> другие клетки и инородные тела</div>
+        <div><b>клетка</b>, способная <b>поглощать</b> другие клетки и инородные тела <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>склонность к судорогам <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>недоразвитие <i>(органа и т. п.)</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>бессилие <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
