--- a/TC-02.html
+++ b/TC-02.html
@@ -46,7 +46,7 @@
         <div>воспаление предстательной железы <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><span>тепловой удар <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></span><br></div>
         <div>расширение мочевого пузыря <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>лор <i>(врач — ухо, горло, нос)</i> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>лор <i>(врач — ухо, горло, нос)</i> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>отмирание <i>(отсутствие питания)</i> во всех структурах <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
       </div>
     </div>
