--- a/lec-02.html
+++ b/lec-02.html
@@ -14,76 +14,41 @@
         <b>Разделить на слоги, проставить ударения, прочитать.</b>
         <br>
         <br>
-        <i>sanguis <div class="area" spellcheck="false" contenteditable="true">sán-guis</div></i>
-        , angulus
-        <div class="area" spellcheck="false" contenteditable="true">угол</div>
-        , cholera
-        <div class="area" spellcheck="false" contenteditable="true">холера</div>
-        , squama
-        <div class="area" spellcheck="false" contenteditable="true">чешуя</div>
-        , intestīnum
-        <div class="area" spellcheck="false" contenteditable="true">кишка, кишечник</div>
-        , ischiaticus
-        <div class="area" spellcheck="false" contenteditable="true">седалищный</div>
-        , pharynx
-        <div class="area" spellcheck="false" contenteditable="true">глотка</div>
-        , cartilāgo
-        <div class="area" spellcheck="false" contenteditable="true">хрящ</div>
-        , aequālis
-        <div class="area" spellcheck="false" contenteditable="true">равный</div>
-        , uterus
-        <div class="area" spellcheck="false" contenteditable="true">матка</div>
-        , thyr(e)oideus
-        <div class="area" spellcheck="false" contenteditable="true">щитовидный</div>
-        , bronchioli
-        <div class="area" spellcheck="false" contenteditable="true">бронхиолы</div>
-        , skeleton
-        <div class="area" spellcheck="false" contenteditable="true">скелет</div>
-        , hypoxīa
-        <div class="area" spellcheck="false" contenteditable="true">пониженное содержание кислорода</div>
-        , unguentum
-        <div class="area" spellcheck="false" contenteditable="true">мазь</div>
-        , mixtio
-        <div class="area" spellcheck="false" contenteditable="true">смесь</div>
-        , rhinītis
-        <div class="area" spellcheck="false" contenteditable="true">воспаление носа</div>
-        , thoracicus
-        <div class="area" spellcheck="false" contenteditable="true">грудной</div>
-        , tibia
-        <div class="area" spellcheck="false" contenteditable="true">малоберцовая кость</div>
-        , fibula
-        <div class="area" spellcheck="false" contenteditable="true">большая берцовая кость</div>
-        , organum
-        <div class="area" spellcheck="false" contenteditable="true">орган</div>
-        , omentum
-        <div class="area" spellcheck="false" contenteditable="true">сальник</div>
-        , paediatrīa
-        <div class="area" spellcheck="false" contenteditable="true">педиатрия</div>
-        , pathologia
-        <div class="area" spellcheck="false" contenteditable="true">патология</div>
-        , ophthalmologus
-        <div class="area" spellcheck="false" contenteditable="true">офтальмолог</div>
-        , anterior
-        <div class="area" spellcheck="false" contenteditable="true">задний</div>
-        , cubitus
-        <div class="area" spellcheck="false" contenteditable="true">локоть</div>
-        , sanguineus
-        <div class="area" spellcheck="false" contenteditable="true">кровяной</div>
-        , cellula
-        <div class="area" spellcheck="false" contenteditable="true">клетка</div>
-        , apnoë
-        <div class="area" spellcheck="false" contenteditable="true">апноэ <i>(временная остановка дыxания)</i></div>
-        , vertebra quinta
-        <div class="area" spellcheck="false" contenteditable="true">5-й позвонок</div>
-        , Ephedra
-        <div class="area" spellcheck="false" contenteditable="true">хвойник</div>
-        , Glycyrrhīza
-        <div class="area" spellcheck="false" contenteditable="true">солодка</div>
-        , Arachis
-        <div class="area" spellcheck="false" contenteditable="true">арахис</div>
-        , Saccharum
+        sanguis <div class="area" spellcheck="false" contenteditable="true"><i>sán-guis</i></div>, angulus
+        <div class="area" spellcheck="false" contenteditable="true">угол</div>, cholera
+        <div class="area" spellcheck="false" contenteditable="true">холера</div>, squama
+        <div class="area" spellcheck="false" contenteditable="true">чешуя</div>, intestīnum
+        <div class="area" spellcheck="false" contenteditable="true">кишка, кишечник</div>, ischiaticus
+        <div class="area" spellcheck="false" contenteditable="true">седалищный</div>, pharynx
+        <div class="area" spellcheck="false" contenteditable="true">глотка</div>, cartilāgo
+        <div class="area" spellcheck="false" contenteditable="true">хрящ</div>, aequālis
+        <div class="area" spellcheck="false" contenteditable="true">равный</div>, uterus
+        <div class="area" spellcheck="false" contenteditable="true">матка</div>, thyr(e)oideus
+        <div class="area" spellcheck="false" contenteditable="true">щитовидный</div>, bronchioli
+        <div class="area" spellcheck="false" contenteditable="true">бронхиолы</div>, skeleton
+        <div class="area" spellcheck="false" contenteditable="true">скелет</div>, hypoxīa
+        <div class="area" spellcheck="false" contenteditable="true">пониженное содержание кислорода</div>, unguentum
+        <div class="area" spellcheck="false" contenteditable="true">мазь</div>, mixtio
+        <div class="area" spellcheck="false" contenteditable="true">смесь</div>, rhinītis
+        <div class="area" spellcheck="false" contenteditable="true">воспаление носа</div>, thoracicus
+        <div class="area" spellcheck="false" contenteditable="true">грудной</div>, tibia
+        <div class="area" spellcheck="false" contenteditable="true">малоберцовая кость</div>, fibula
+        <div class="area" spellcheck="false" contenteditable="true">большая берцовая кость</div>, organum
+        <div class="area" spellcheck="false" contenteditable="true">орган</div>, omentum
+        <div class="area" spellcheck="false" contenteditable="true">сальник</div>, paediatrīa
+        <div class="area" spellcheck="false" contenteditable="true">педиатрия</div>, pathologia
+        <div class="area" spellcheck="false" contenteditable="true">патология</div>, ophthalmologus
+        <div class="area" spellcheck="false" contenteditable="true">офтальмолог</div>, anterior
+        <div class="area" spellcheck="false" contenteditable="true">задний</div>, cubitus
+        <div class="area" spellcheck="false" contenteditable="true">локоть</div>, sanguineus
+        <div class="area" spellcheck="false" contenteditable="true">кровяной</div>, cellula
+        <div class="area" spellcheck="false" contenteditable="true">клетка</div>, apnoë
+        <div class="area" spellcheck="false" contenteditable="true">апноэ <i>(временная остановка дыxания)</i></div>, vertebra quinta
+        <div class="area" spellcheck="false" contenteditable="true">5-й позвонок</div>, Ephedra
+        <div class="area" spellcheck="false" contenteditable="true">хвойник</div>, Glycyrrhīza
+        <div class="area" spellcheck="false" contenteditable="true">солодка</div>, Arachis
+        <div class="area" spellcheck="false" contenteditable="true">арахис</div>, Saccharum
         <div class="area" spellcheck="false" contenteditable="true">саxар</div>
-        <br>
       </div>
     </div>
   </main>
