--- a/TC-02.html
+++ b/TC-02.html
@@ -16,7 +16,7 @@
         <div><i>Exemplum:</i><span style="white-space: pre;">	</span>зубная боль <div class="area" spellcheck="false" contenteditable="true">odont-</div> <div class="area" spellcheck="false" contenteditable="true">-algia</div></div>
         <div><br></div>
         <div>возникающий в организме, вследствие внутренних причин <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>повышенное содержание сахара в крови <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>повышенное содержание сахара в крови <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div> <div class="area" spellcheck="false" contenteditable="true"></div>
         <div>воспаление околоушной железы <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>малокровие <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>отсутствие эмоций, интереса <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
@@ -34,14 +34,14 @@
         <div>боли в прямой кишке <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>маточное кровотечение <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>эмоционально-умственное расстройство <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>воспаление кишечника <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>воспаление кишечника <div class="area" spellcheck="false" contenteditable="true"></div> (<div class="area" spellcheck="false" contenteditable="true"></div>) <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>спазм сосудов <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>осмотр века <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>наличие крови в моче <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>раковая опухоль <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>отсутствие языка <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>инструмент для внутреннего осмотра <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>воспаление желудка и двендцатиперстной кишки <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
+        <div>воспаление желудка и двендцатиперстной кишки <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div> <div class="area" spellcheck="false" contenteditable="true"></div>
         <div>рассечение почки <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>воспаление предстательной железы <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div><span>тепловой удар <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></span><br></div>
