--- a/TC-02.html
+++ b/TC-02.html
@@ -16,7 +16,7 @@
         <div><i>Exemplum:</i><span style="white-space: pre;">	</span>зубная боль <div class="area" spellcheck="false" contenteditable="true">odont-</div> <div class="area" spellcheck="false" contenteditable="true">-algia</div></div>
         <div><br></div>
         <div>возникающий в организме, вследствие внутренних причин <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
-        <div>повышенное содержание сахара в крови <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div> <div class="area" spellcheck="false" contenteditable="true"></div>
+        <div>повышенное содержание сахара в крови <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>воспаление околоушной железы <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>малокровие <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
         <div>отсутствие эмоций, интереса <div class="area" spellcheck="false" contenteditable="true"></div> <div class="area" spellcheck="false" contenteditable="true"></div></div>
